--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,14 +7,14 @@ substitutions:
   _CLUSTER_NAME: ppcluster-1
   _CLUSTER_REGION: europe-north1
   _K8S_NAMESPACE: default
-  _APP_NAME: social10
+  _APP_NAME: fortuneplay-fun-ppc-social
   _CONTAINER_PORT: "80"
   _SERVICE_PORT: "80"
   _AR_LOCATION: europe-north1
   _AR_REPOSITORY: ourimages
-  _HOSTNAME: uberspinners.com
+  _HOSTNAME: fortuneplay.fun
+  _ALT_HOSTNAME: www.fortuneplay.fun
   # optional DNS automation, fill only if you want it
-
 
 steps:
   - name: gcr.io/cloud-builders/docker
@@ -106,6 +106,15 @@ steps:
                         name: ${_APP_NAME}
                         port: { number: ${_SERVICE_PORT} }
             - host: www.${_HOSTNAME}
+              http:
+                paths:
+                  - path: /
+                    pathType: Prefix
+                    backend:
+                      service:
+                        name: ${_APP_NAME}
+                        port: { number: ${_SERVICE_PORT} }
+            - host: ${_ALT_HOSTNAME}
               http:
                 paths:
                   - path: /
