--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,38 +1,38 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: social10
+  name: fortuneplay-fun-ppc-social
   labels:
-    app: social10
+    app: fortuneplay-fun-ppc-social
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: social10
+      app: fortuneplay-fun-ppc-social
   template:
     metadata:
       labels:
-        app: social10
+        app: fortuneplay-fun-ppc-social
     spec:
       containers:
-        - name: social10
+        - name: fortuneplay-fun-ppc-social
           image: IMAGE_PLACEHOLDER
           ports:
-            - containerPort: 8080
+            - containerPort: 80
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: social10
+  name: fortuneplay-fun-ppc-social
   labels:
-    app: social10
+    app: fortuneplay-fun-ppc-social
 spec:
   type: LoadBalancer
   selector:
-    app: social10
+    app: fortuneplay-fun-ppc-social
   ports:
     - name: http
       protocol: TCP
       port: 80
-      targetPort: 8080
+      targetPort: 80
   loadBalancerIP: LOAD_BALANCER_IP_PLACEHOLDER
